--- a/i18n/po/zh.po
+++ b/i18n/po/zh.po
@@ -29,7 +29,7 @@ msgstr "[隐藏余额]"
 
 #: src/js/controllers/walletHome.js
 msgid "{{fee}} will be deducted for groestlcoin networking fees"
-msgstr "扣除黑币网络费用 {{fee}}"
+msgstr "扣除闪电币网络费用 {{fee}}"
 
 #: public/views/includes/confirm-tx.html
 msgid "{{feeRateStr}} of the transaction"
@@ -57,8 +57,8 @@ msgid "* A payment proposal can be deleted if 1) you are the creator, and no oth
 msgstr "* 如果 1) 你是创造者，及没有其他 copayer 签名，或 2) 24 小时已经过去，支付提议将被删除。"
 
 #: public/views/includes/terms.html
-msgid "<b>IF YOU LOSE ACCESS TO YOUR GroestlPay WALLET OR YOUR ENCRYPTED PRIVATE KEYS AND YOU HAVE NOT SEPARATELY STORED A BACKUP OF YOUR WALLET AND CORRESPONDING PASSWORD, YOU ACKNOWLEDGE AND AGREE THAT ANY CAPRICOINS YOU HAVE ASSOCIATED WITH THAT GroestlPay WALLET WILL BECOME INACCESSIBLE.</b>"
-msgstr "<b>如果你无法访问你的 GroestlPay 钱包或加密私钥，及你没有分开储存钱包备份和相应密码，你承认并同意有关 GroestlPay 钱包里的任何黑币将不可被存取。</b>"
+msgid "<b>IF YOU LOSE ACCESS TO YOUR GroestlPay WALLET OR YOUR ENCRYPTED PRIVATE KEYS AND YOU HAVE NOT SEPARATELY STORED A BACKUP OF YOUR WALLET AND CORRESPONDING PASSWORD, YOU ACKNOWLEDGE AND AGREE THAT ANY GROESTLCOINS YOU HAVE ASSOCIATED WITH THAT GroestlPay WALLET WILL BECOME INACCESSIBLE.</b>"
+msgstr "<b>如果你无法访问你的 GroestlPay 钱包或加密私钥，及你没有分开储存钱包备份和相应密码，你承认并同意有关 GroestlPay 钱包里的任何闪电币将不可被存取。</b>"
 
 #: public/views/backup.html
 msgid "<b>OR</b> 1 wallet export file and the remaining quorum of wallet recovery phrases (e.g. in a 3-5 wallet: 1 wallet export file + 2 wallet recovery phrases of any of the other copayers)."
@@ -74,7 +74,7 @@ msgstr "<b>或</b> 钱包里的 <b>所有</b> copayers 的钱包恢复短语"
 
 #: public/views/disclaimer.html
 msgid "A multisignature groestlcoin wallet"
-msgstr "多重签名黑币钱包"
+msgstr "多重签名闪电币钱包"
 
 #: public/views/preferencesGlobal.html
 msgid "About GroestlPay"
@@ -245,19 +245,19 @@ msgstr "BIP32 路径的地址衍生"
 
 #: public/views/walletHome.html
 msgid "Groestlcoin address"
-msgstr "黑币地址"
+msgstr "闪电币地址"
 
 #: public/views/preferencesGlobal.html
 msgid "Groestlcoin Network Fee Policy"
-msgstr "黑币网络手续费策略"
+msgstr "闪电币网络手续费策略"
 
 #: public/views/preferencesFee.html
 msgid "Groestlcoin transactions may include a fee collected by miners on the network. The higher the fee, the greater the incentive a miner has to include that transaction in a block. Current fees are determined based on network load and the selected policy."
-msgstr "黑币交易可能包括网络矿工所收取的费用。收费越高，交易区块越大矿工的奖励也越多。当前收费的数值取决于网络负载和所选定的策略。"
+msgstr "闪电币交易可能包括网络矿工所收取的费用。收费越高，交易区块越大矿工的奖励也越多。当前收费的数值取决于网络负载和所选定的策略。"
 
 #: public/views/paymentUri.html
 msgid "Groestlcoin URI is NOT valid!"
-msgstr "黑币 URI 无效！"
+msgstr "闪电币 URI 无效！"
 
 #: public/views/modals/txp-details.html
 msgid "Broadcast Payment"
@@ -488,7 +488,7 @@ msgstr "无法加入钱包"
 
 #: src/js/controllers/walletHome.js
 msgid "Could not recognize a valid Groestlcoin QR Code"
-msgstr "无法识别有效的黑币 QR 代码"
+msgstr "无法识别有效的闪电币 QR 代码"
 
 #: src/js/controllers/modals/txpDetails.js
 msgid "Could not reject payment"
@@ -1013,7 +1013,7 @@ msgstr "多个接收者"
 
 #: public/views/walletHome.html
 msgid "My Groestlcoin address"
-msgstr "我的黑币地址"
+msgstr "我的闪电币地址"
 
 #: public/views/modals/addressbook.html
 msgid "My contacts"
@@ -1468,7 +1468,7 @@ msgstr "通过电邮发送地址"
 
 #: public/views/includes/confirm-tx.html
 msgid "Send groestlcoin"
-msgstr "发送黑币"
+msgstr "发送闪电币"
 
 #: public/views/export.html
 #: public/views/preferencesLogs.html
@@ -1634,7 +1634,7 @@ msgstr "使用条款"
 
 #: public/views/includes/terms.html
 msgid "The authors of the software, employees, copyright holders, cannot retrieve your private keys or passwords if you lose or forget them and cannot guarantee transaction confirmation as they do not have control over the Groestlcoin network."
-msgstr "如果你遗失或忘记私钥或密码，软件的作者、员工及附属公司、版权持有人等均无法取回你的私钥或密码，由于他们没有黑币网络的管理权，他们也不能保证交易确认。"
+msgstr "如果你遗失或忘记私钥或密码，软件的作者、员工及附属公司、版权持有人等均无法取回你的私钥或密码，由于他们没有闪电币网络的管理权，他们也不能保证交易确认。"
 
 #: public/views/import.html
 msgid "The derivation path"
@@ -1667,7 +1667,7 @@ msgstr "服务器不理解此请求"
 
 #: public/views/includes/terms.html
 msgid "The software does not constitute an account where  other third parties serve as financial intermediaries or custodians of your groestlcoin."
-msgstr "此软件并不构成一个账户，其他第三方作为金融中介机构或保管人以保管你的黑币。"
+msgstr "此软件并不构成一个账户，其他第三方作为金融中介机构或保管人以保管你的闪电币。"
 
 #: public/views/includes/terms.html
 msgid "The software you are about to use functions as a free, open source, and multi-signature digital wallet."
