--- a/i18n/docs/appstore_tr.txt
+++ b/i18n/docs/appstore_tr.txt
@@ -1,23 +1,23 @@
-Groestlcoinlerinizi kendi kurallarınıza göre BitPay tarafından oluşturulan açık kaynak, çoklu imzalı bir cüzdan ile koruyun. 
+Groestlcoinlerinizi kendi kurallarınıza göre BitPay tarafından oluşturulan açık kaynak, çoklu imzalı bir cüzdan ile koruyun.
 GroestlPay kullanıcıları paralarını ayrı ayrı tutabilir veya çoklu imzalı cüzdanlar ile diğer kullanıcılarla arasında mali durumları paylaşabilirler ki birden fazla onay isteyen yetkilendirilmemiş ödemeleri önleyebilirler. Diğerleri ile kullanmak için bazı GroestlPay yolları:
 
-Tatil veya arkadaşlarınızla ortak siparişler vermek için 
+Tatil veya arkadaşlarınızla ortak siparişler vermek için
 Aile ve sabit harcamalarınız için
 İşletme, kulüp veya organizasyon fon ve giderlerini yönetmek için
 
 GroestlPay olarak, bu groestlcoin cüzdan sürümüne aşağıdaki güvenlik veya erişilebilirlikten ödün vermeyen özellikleri yerleştirdik:
 
-Yazılım içi çoklu cüzdan oluşturma ve yönetme 
+Yazılım içi çoklu cüzdan oluşturma ve yönetme
 Bireysel veya paylaşılan cüzdanlar için çoklu imzalı sezgisel güvenlik
 Paylaşılan cüzdan ve grup ödemeler için kolay harcama teklifi
-Hiyerarşik belirleyici (HD) adres oluşturma ve cüzdan yedekleme 
+Hiyerarşik belirleyici (HD) adres oluşturma ve cüzdan yedekleme
 Donanım tabanlı güvenlik: tüm özel anahtarlar yerel olarak depolanır, asla bulutta tutulmaz
 Groestlcoin testnet cüzdanlarını destekler
 Başlıca mobil ve masaüstü platformlarına senkronize erişim
 Ödeme Protokolü (BIP70-BIP73) desteği: kolayca tanımlanabilen ödeme talepleri ve doğrulanabilir güvenli groestlcoin ödemeleri
-150'den fazla para birimi desteği ve GRS&Bits arasında birim gösterim seçimi
+150'den fazla para birimi desteği ve GRS&Groestls arasında birim gösterim seçimi
 Ödemeler ve transferler için e-posta bildirimleri
 Özelleştirilebilir cüzdan adlandırma ve arka plan renkleri
 10 dil desteği (EN, JP, FR, ES, BT, DE, PT, RU, EL, TR)
 
-GroestlPay, sahipli olmayan sunucular üzerinde çalışan açık kaynak kodlu bir yazılımdır. Yani işlevine devam etmek için herhangi bir firmanın düzenli desteğine ihtiyaç duymaz. İsteyen herkes GroestlPay'in GitHub üzerindeki (https://github.com/Groestlcoin/GroestlPay) açık kaynak koduna bakabilir veya katkıda bulunabilir. 
+GroestlPay, sahipli olmayan sunucular üzerinde çalışan açık kaynak kodlu bir yazılımdır. Yani işlevine devam etmek için herhangi bir firmanın düzenli desteğine ihtiyaç duymaz. İsteyen herkes GroestlPay'in GitHub üzerindeki (https://github.com/Groestlcoin/GroestlPay) açık kaynak koduna bakabilir veya katkıda bulunabilir.
